# ScaleSpace-3D

./: CMakeLists.txt  README.md
plugins/ScaleSpace3d/: DistrhoPluginInfo.h  ScaleSpace3d.cpp  ScaleSpace3dControls.hpp  ScaleSpace3dUI.cpp
plugins/ScaleSpace3d/lib/DearWidgetsApi/: dear_widgets.cpp
